--- a/app/views/static/login.html.erb
+++ b/app/views/static/login.html.erb
@@ -1,12 +1,16 @@
-<h2>Log In</h2>
+ <div class="row">
+  <div class="col-lg-8 col-lg-offset-2">
+    <h2>Log In</h2>
 
-<div id="central-login">
-  <p>If you have a <a href="https://www.uc.edu/distance/Student_Orientation/One_Stop_Student_Resources/central-log-in-.html">UC Central Login username</a>, you can use it to log in to Scholar@UC.</p>
-  <p><%= link_to 'Log in using your UC Central Login', '/users/auth/shibboleth', class: 'btn btn-primary', style: 'font-size: larger' %></p>
-</div>
+    <div id="central-login">
+      <p>If you have a <a href="https://www.uc.edu/distance/Student_Orientation/One_Stop_Student_Resources/central-log-in-.html">UC Central Login username</a>, you can use it to log in to Scholar@UC.</p>
+      <p><%= link_to 'Log in using your UC Central Login', '/users/auth/shibboleth', class: 'btn btn-primary', style: 'font-size: larger' %></p>
+    </div>
 
-<div id="local-login">
-  &nbsp;<br />
-  <h3>Other Users</h3>
-  <p>If you're not affiliated with UC, but have been given an account for <%= t('hyrax.product_name') %>, you can <strong><%= link_to 'log in using a local account', new_user_session_path %></strong>.  To request an account, <%= link_to 'use the contact page', contact_path %>.</p>
+    <div id="local-login">
+      &nbsp;<br />
+      <h3>Other Users</h3>
+      <p>If you're not affiliated with UC, but have been given an account for <%= t('hyrax.product_name') %>, you can <strong><%= link_to 'log in using a local account', new_user_session_path %></strong>.  To request an account, <%= link_to 'use the contact page', contact_path %>.</p>
+    </div>
+  </div>
 </div>
