--- a/app/views/hyrax/base/show.html.erb
+++ b/app/views/hyrax/base/show.html.erb
@@ -27,7 +27,8 @@
             <% end %>
             <%= render 'citations', presenter: @presenter %>
             <%= render 'social_media' %>
-            <%= t('.last_modified') %>: <%= @presenter.date_modified %>
+            <%= t('.date_uploaded') %>: <%= @presenter.date_uploaded %>
+            <br><%= t('.date_modified') %>: <%= @presenter.date_modified %>
           </div>
           <div class="col-sm-9">
             <%= render 'work_description', presenter: @presenter %>
