--- a/app/views/hyrax/base/_doi.html.erb
+++ b/app/views/hyrax/base/_doi.html.erb
@@ -1,4 +1,4 @@
-<h2>DOI</h2>
+<h2>Digital Object Identifier (DOI)</h2>
 
 <p>
   <% remote_service = Hydra::RemoteIdentifier.remote_service(:doi) %>
