--- a/app/views/catalog/_index_list_default.html.erb
+++ b/app/views/catalog/_index_list_default.html.erb
@@ -4,8 +4,8 @@
     <% doc_presenter = index_presenter(document) %>
     <% index_fields(document).each do |field_name, field| -%>
       <% if should_render_index_field? document, field %>
-          <dt><%= render_index_field_label document, field: field_name %></dt>
-          <dd><%= doc_presenter.field_value field_name %></dd>
+          <dt class="field-label <%= field_name %>"><%= render_index_field_label document, field: field_name %></dt>
+          <dd class="field-text <%= field_name %>"><%= doc_presenter.field_value field_name %></dd>
       <% end %>
     <% end %>
     </dl>
